# VeluxEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  build.bat  compile_shader.bat  odinfmt.json  ols.json  vcpkg-configuration.json  vcpkg.json
assets/shaders/: triangle.slang
framework/core/: log.odin
framework/engine/: engine.odin
framework/gpu/: buffer.odin  commands.odin  config.odin  descriptors.odin  device.odin  frame.odin  gpu_init.odin  image.odin  pipeline.odin  pipeline_builder.odin  transfer.odin  vertex_data.odin  vulkan_init.odin
framework/platform/: input.odin  window.odin
framework/ui/: panel.odin  ui.odin
framework/velux/: api.odin  camera.odin  engine.odin  hot_reload_shader.odin  ui.odin  voxel.odin  voxel_mesh.odin
game/: CMakeLists.txt  game.cpp
launcher/: CMakeLists.txt  velux_app_stub.cpp  velux_entry.cpp
samples/01_window/: main.odin
samples/02_triangle/: main.odin
samples/03_mesh/: main.odin
samples/04_voxel/: main.odin
samples/04_voxel/assets/: voxel.slang  voxel.spv
samples/05_raymarch/: imgui.ini  main.odin
samples/05_raymarch/assets/: raymarch.slang  raymarch.spv
samples/05_voxel_raycast/: imgui.ini  main.odin
samples/05_voxel_raycast/assets/: voxel_raycast.slang
shaders/: mesh.slang  triangle.slang
tests/: voxel_test.odin
veluxengine/: CMakeLists.txt  velux_application.cpp  velux_application.h  velux_autorelease.h  velux_common.h  velux_entry.h  velux_error.h  velux_filesystem.h  velux_glfw3.cpp  velux_glfw3.h  velux_gpu_device.cpp  velux_gpu_device.h  velux_gpu_vulkan.h  velux_log.cpp  velux_log.h  velux_vk_string.cpp  velux_vk_string.h
